results/SpecGenBench/2-shot/log-JewelsInStones-2023_11_06_01_56_56.txt
class JewelsInStones {
    //@ requires jewels != null && stones != null;
    //@ ensures \result >= 0;
    public int numJewelsInStones(String jewels, String stones) {
        int jewelsCount = 0;
        int jewelsLength = jewels.length(), stonesLength = stones.length();
        //@ maintaining 0 <= i && i <= stonesLength;
        //@ maintaining 0 <= j && j <= jewelsLength;
        //@ maintaining jewelsCount >= 0;
        //@ decreases stonesLength - i;
        for (int i = 0; i < stonesLength; i++) {
            char stone = stones.charAt(i);
            //@ maintaining 0 <= j && j <= jewelsLength;
            //@ maintaining jewelsCount >= 0;
            //@ decreases jewelsLength - j;
            for (int j = 0; j < jewelsLength; j++) {
                char jewel = jewels.charAt(j);
                if (stone == jewel) {
                    jewelsCount++;
                    break;
                }
            }
        }
        return jewelsCount;
    }
}
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:8: error: cannot find symbol
        //@ maintaining 0 <= j && j <= jewelsLength;
                             ^
  symbol:   variable j
  location: class JewelsInStones
/home/max/Documents/JMLGPT/tmp/JewelsInStones.java:8: error: cannot find symbol
        //@ maintaining 0 <= j && j <= jewelsLength;
                                  ^
  symbol:   variable j
  location: class JewelsInStones
2 errors

